fix overflow

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -68,8 +68,7 @@
 		// display: unset;
 		place-content: unset;
 		place-items: center;
-
-		min-height: 75vh;
+		min-height: unset;
 	}
 
 	.todoCard {
